# language

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: github-actions-demo.yml
bash/: cuda_memory.sh
ci/: test.sh
cmake/: CMakeLists.txt  README.md
cmake-module/: FindcuBLAS.cmake
cmake/A-hello-cmake/: CMakeLists.txt  main.cpp
cmake/B-hello-headers/: CMakeLists.txt
cmake/B-hello-headers/include/: Apple.h
cmake/B-hello-headers/src/: Apple.cpp  main.cpp
cmake/C-static-library/: CMakeLists.txt
cmake/C-static-library/include/static/: Hello.h
cmake/C-static-library/src/: Hello.cpp  main.cpp
cmake/D-shared-library/: CMakeLists.txt
cmake/D-shared-library/include/shared/: Hello.h
cmake/D-shared-library/src/: Hello.cpp  main.cpp
cmake/E-installing/: CMakeLists.txt
cmake/E-installing/include/installing/: Hello.h
cmake/E-installing/src/: Hello.cpp  main.cpp
cmake/F-build-type/: CMakeLists.txt  main.cpp
cmake/H-third-party-library/: CMakeLists.txt  main.cpp
cmake/J-building-with-ninja/: CMakeLists.txt
cmake/cmake/: util.cmake
cmake/configure-file/: CMakeLists.txt  main.cpp  ver.h.in
cmake/find-package/: READMD.md
cmake/protobuf/: CMakeLists.txt  ModelConfig.proto  main.cpp
cmake/target-scope/: README.md
cmake/testing/: CMakeLists.txt  apple.cpp  apple.h  file.h  file1.cpp  main.cpp
cpp/: CMakeLists.txt
cpp/class-member-initailzation/: CMakeLists.txt  main.cpp
cpp/constructor/: CMakeLists.txt  main.cpp
cpp/cpp-test/: CMakeLists.txt  main.cpp
cpp/cpp11-misc/: CMakeLists.txt  main.cpp
cpp/docker/: CMakeLists.txt  main.cpp  main1.cpp
cpp/generic/: CMakeLists.txt  main.cpp
cpp/jit/: CMakeLists.txt  main.cpp
cpp/producer-consumer/: CMakeLists.txt  main.cpp
cpp/protobuf/: Address.proto  CMakeLists.txt  main.cpp
cpp/protobuf/cmake/: proto2cpp.cmake
cpp/pybind-example/: CMakeLists.txt  main.cpp  main1.cpp
cpp/shared_from_this/: CMakeLists.txt  main.cpp
cpp/singleton/: CMakeLists.txt  main.cpp
cpp/smart-pointer/: CMakeLists.txt  main.cpp
cpp/template-inheritance/: CMakeLists.txt  main.cpp
cpp/thread/: CMakeLists.txt  main.cpp
cpp/thread-pool/: CMakeLists.txt  main.cpp
cpp/type-traits/: CMakeLists.txt  main.cpp
cpp/variadic-template/: CMakeLists.txt  main.cpp
cpp/variadic-template-1/: main.cpp
cuda/: CMakeLists.txt
cuda/0_hello_world/: CMakeLists.txt  main.cu
cuda/include/: cuda_handle.h  freshman.h  smart_pointer.h  util.h
cuda/lib/: CMakeLists.txt  util.cu
cuda/matmul/: CMakeLists.txt  README.md  main.cu  matmul.cu  matmul.h
cuda/matrix_sum/: CMakeLists.txt  README.md  main.cu
cuda/reduce_sum/: CMakeLists.txt  README.md  main.cu
cuda/sum_arrays/: CMakeLists.txt  sum_arrays.cu
