add_subdirectory(A-hello-cmake)
add_subdirectory(B-hello-headers)
add_subdirectory(C-static-library)
add_subdirectory(D-shared-library)
add_subdirectory(E-installing)
add_subdirectory(H-third-party-library)
add_subdirectory(J-building-with-ninja)
add_subdirectory(testing)
add_subdirectory(configure-file)
add_subdirectory(protobuf)
