add_subdirectory(variadic-template-1)
add_subdirectory(thread-pool)
add_subdirectory(producer-consumer)
add_subdirectory(template-inheritance)
add_subdirectory(pybind-example)
add_subdirectory(type-traits)
add_subdirectory(cpp11-misc)
add_subdirectory(thread)
add_subdirectory(smart-pointer)
add_subdirectory(cpp-test)
add_subdirectory(constructor)
add_subdirectory(protobuf)
add_subdirectory(class-member-initailzation)
