add_subdirectory(variadic-template-1)
add_subdirectory(thread-pool)
add_subdirectory(producer-consumer)
add_subdirectory(template-inheritance)
if (BUILD_PYBIND)
    message("build pybind11: cmake stage will take some time, since it need to download from github")
    add_subdirectory(pybind-example)
endif()
add_subdirectory(type-traits)
add_subdirectory(cpp11-misc)
add_subdirectory(thread)
add_subdirectory(smart-pointer)
add_subdirectory(cpp-test)
add_subdirectory(constructor)
if (BUILD_CPP_PROTOBUF)
    message("build cpp protobuf: build stage will take some time, since it need to download from github")
    add_subdirectory(protobuf)
endif()
add_subdirectory(class-member-initailzation)
add_subdirectory(generic)
add_subdirectory(jit)
add_subdirectory(singleton)
