add_executable(testing main.cpp)
target_compile_options(testing PRIVATE -ftemplate-depth=100000000)
find_package(Threads)
target_link_libraries(testing ${CMAKE_THREAD_LIBS_INIT})
add_library(xx_lib file.cpp file1.cpp)

# add_library(apple_lib apple.h apple.cpp)

# # message("current project source dir" ${CMAKE_CURRENT_SOURCE_DIR})
# # message("current project binary dir" ${CMAKE_CURRENT_BINARY_DIR})
# list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../cmake)
# include(util)
# set(THIRD_PARTY_MIRROR "aliyun" CACHE STRING "")
# set(REPO_COMMON_URL https://github.com/triton-inference-server/common/archive/refs/heads/r21.10.zip)
# use_mirror(VARIABLE REPO_COMMON_URL URL ${REPO_COMMON_URL})
# message(STATUS ${REPO_COMMON_URL} ${URL})

# set(apple_lib -Wl,--whole-archive apple_lib -Wl,--no-whole-archive)
# add_executable(apple_exe main.cpp)
# target_link_libraries(apple_exe ${apple_lib})
